# langchain-getting-started

./: .gitignore  README.md  basic_agent.py  langchain_acedemy_l2_messages.py  pyproject.toml  realworld_agent.py
langchain_academy/: langchain_academy_l1_fast_agent.py  langchain_academy_l4_tools.py  langchain_academy_l5_tools_with_mcp.py  langchain_academy_l6_memory.py  langchain_academy_l7_structured_output.py  langchain_acedemy_l3_streaming.py
